--- a/beak-and-snout-apothecary/netlify.toml
+++ b/beak-and-snout-apothecary/netlify.toml
@@ -1,7 +1,7 @@
 [build]	
-   command = "yarn build"
+   command = "npm build"
     build = "build"
-    
+
 [build.environment]	
     NODE_ENV = "development"	
 
