--- a/beak-and-snout-apothecary/netlify.toml
+++ b/beak-and-snout-apothecary/netlify.toml
@@ -1,5 +1,7 @@
 [build]	
-   command = "npm build"
+    base    = "docs"
+    publish = "_site"
+    command = "npm build"
     build = "build"
 
 [build.environment]	
